# nya

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  qwen.md  run_tests_with_sentinel.sh  simple_test.nya
.qwen/: QWEN.md
Tym-ra-du/: cellular_automata_kymya.nya  data_structures_kymya.nya  file_operations_kymya.nya  io_kymya.nya  kymya_truth.nya  shira_kymya.nya  sorting_algorithms_kymya.nya  turing_kymya.nya
docs/: performance_issues_warning.md
lym-deya-core/: BrahmandaLym.cpp  BrahmandaLym.hpp  KarmaExec.cpp  LymDeya.cpp
nya-spec/: grammar_rules.def  grammar_validation.md  grammar_validator.py  nya-keywords.txt  nya-nymya-deya.md  phoneme_validator.py  phonemes.def  phonetic_validation.md  test_grammar_validator.py  test_phoneme_validator.py
nykymya/: Kykyra_Satya_Lora.nya
std-nymya/: Nya_Ascension_Protocols.cpp  Nya_Ascension_Protocols.hpp  Nya_Awareness.cpp  Nya_Awareness.hpp  Nya_Consciousness_Utils.cpp  Nya_Consciousness_Utils.hpp  Nya_Cosmic_Interactions.cpp  Nya_Cosmic_Interactions.hpp  Nya_Quantum_Utils.cpp  Nya_Quantum_Utils.hpp  README.md
std-nymya-el/: brahmanda_coherence.nya  cellular_automata_el.nya  data_structures_el.nya  file_operations_el.nya  input_output_el.nya  shira_vibration.nya  sorting_algorithms_el.nya  turing_machine_el.nya  tym_vishrama.nya
std-nymya/doc/: Nya_Ascension_Protocols_Documentation.md  Nya_Awareness_Documentation.md  Nya_Consciousness_Utils_Documentation.md  Nya_Cosmic_Interactions_Documentation.md  Nya_Quantum_Utils_Documentation.md
tests/: awareness_test.nya  comprehensive_test.nya  quantum_test.nya
